--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "license": "MIT",
   "dependencies": {
     "ipfs": "^0.27.5"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.1.0",
+    "eslint": "^4.14.0"
   }
 }
