--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "ipfs-example",
   "version": "0.1.0",
   "description": "",
-  "main": "js/server.js",
+  "main": "js/main.js",
   "scripts": {
-    "start": "node js/server.js"
+    "build": "npm run lint && webpack --config webpack.config.prod.js -p",
+    "start": "webpack-dev-server --d --hot --inline --progress --port 4857",
+    "lint": "eslint js"
   },
   "author": "Noman <noman@noman.land>",
   "license": "MIT",
@@ -12,7 +14,23 @@
     "ipfs": "^0.27.5"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^8.1.0",
-    "eslint": "^4.14.0"
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "eslint": "^4.14.0",
+    "node-sass": "^4.7.2",
+    "path": "^0.12.7",
+    "raw-loader": "^0.5.1",
+    "sass": "^1.0.0-beta.4",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.1",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7"
   }
 }
