--- a/package.json
+++ b/package.json
@@ -4,33 +4,34 @@
   "description": "",
   "main": "js/main.js",
   "scripts": {
-    "build": "npm run lint && webpack --config webpack.config.prod.js -p",
+    "build": "npm run lint && webpack-cli --config webpack.config.prod.js -p",
     "start": "webpack-dev-server --d --hot --inline --progress --port 4857",
     "lint": "eslint js"
   },
   "author": "Noman <noman@noman.land>",
   "license": "MIT",
   "dependencies": {
-    "ipfs": "^0.32.1"
+    "ipfs": "^0.34.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.1.0",
-    "babel-loader": "^7.1.2",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.2",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.14.0",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.6.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.9.3",
     "path": "^0.12.7",
-    "raw-loader": "^0.5.1",
-    "sass": "^1.0.0-beta.4",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.1",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7"
+    "raw-loader": "^2.0.0",
+    "sass": "^1.13.4",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
+    "url-loader": "^1.1.1",
+    "webpack": "^4.19.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8"
   }
 }
